css/business-frontpage.css
/*!
 * Start Bootstrap - Busines Frontpage (https://startbootstrap.com/template-overviews/business-frontpage)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-business-frontpage/blob/master/LICENSE)
 */

body {
  padding-top: 54px;
font-family: 'Stylish', sans-serif;
background-color: #10381c;
color: lightgrey;
}

 li a{
  color: lightgreen;
}

p a{
 color: lightgreen;
}

p a{
 color: lightgreen;
}

a:hover, a:active, a:focus {
  color: lightgrey;
}

name{
  color: lightgreen;
}

#BIO, #ROY, #CERTS, #SPEAK {
padding-top: 100px;
}

#topwrapper {
font-size: 20px;
      }

#midhead {
font-size: 25px;
justify-content: left;
width: 100%;
      }

#aboutwrapper {
padding-top: 150px;
font-size: 20px;
      }

#aboutwrapper1 {
  padding-top: 50px;
  font-size: 20px;
   }

#aboutwrapper2 {
  padding-top: 150px;
  font-size: 20px;
   }

#aboutwrapper3 {
padding-top: 150px;
font-size: 20px;
   }




#top {
      float: right;
      margin-top: -30px;
      color: lightgreen
            }

#flower {
    float: right;
padding-left: 10px;
            }

#pmbenifits{
float: left;
width: 40%;
margin-right:50px;
margin: 20px;

            }

#pmservices{
margin:20px;
width: 40%;
margin-left: 50px;
float: right;
}

#center {
margin: 0 auto;
}

#servicerow {
display: flex;
justify-content: center;
padding-bottom: 15px;
}


@media (min-width: 992px) {
  body {
    padding-top: 56px;
  }
}
ul {
  margin: 15px 0;
}

li {
  list-style-type: disc;
  list-style-position: outside;
  margin-left: 20px;
}



.business-header {
  /* height: 50vh; */
  min-height: 300px;
  background: url('images/sunset_main.jpg')center center no-repeat scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

.card {
  height: 100%;
  display: block;
}

#horn{
  float: left;
  width: 35%;
  height: auto;
  margin: 15px;
  background-color: lightgrey;
  padding: 1px;
  margin-top: 5px;
  margin-bottom: 7px;
  margin-left: 0px;
}

#mike{
  float: left;
  width: 40%;
  height: auto;
  margin:15px;
  margin-left: 0px;
  margin-top: 5px;
  padding: 1px;
  outline-width: 1px;
  border-style: double;
  background-color: lightgrey;
  padding: 1px;
  margin-bottom: 7px;
}

#hunter{
  float: left;
  width: 25%;
  height: auto;
  margin: 10px;
  margin-top: 20px;
  margin-right: 15px;
  background-color: lightgrey;
  padding: 1px;
}

#trap{
  float: right;
  width: 35%;
  height: auto;
  margin: 20px;
  margin-bottom: 10px;
  background-color: lightgrey;
  padding: 1px;
}

#girls{
transform: rotate(90deg);
  margin-bottom: 75px;
  margin-top: 75px;
  background-color: lightgrey;
  padding: 1px;
  width: 50%;
  height: auto;
text-align: center;
margin-left: 135px;

}

#pond{
float: right;
  width: 43%;
  height: auto;
  margin-top: 50px;
  margin-right: 10px;
  margin-left: 30px;
  padding: 1px;
  background-color: lightgrey;
  padding: 1px;

}




.service_container li{
  list-style-type: disc;
  list-style-position: outside;
  margin-left: 20px;
}

.service_container{
  margin-left: 20%;
  justify-content: center;
  width: 100%;
}

/* change shit here, Mary! */
.card:hover {
  border-color: white;
  border-width: 3px;
}

.card:hover .card-body {
  background-color: darkgrey;
}

.card:hover .card-body h4 {
  color: white;
}
/* stop changing shit here, Mary! */

.instruction-text {
  font-size: 20px;
  line-height: 1.5;
  padding-left: 1.0em;
  text-indent: -.6em;
}

.headerPics{
  position: relative;


}

.main-logo{
  position: absolute;
  border:1px solid black;
}

.card-body{
background-color: darkgrey;
}

.card-title{
color: black;
text-align: center;
}

footer{
  position: relative;
  height: 10px;
}

.main-logo{
  width: 20%;
  height: auto;
  position: absolute;
top: 10%;
left: 40%;
}

.img-pic{
width: 10%;

}



.img-thumbnail{
  width: 225px;
  height: 209.75px;
}

.img-fluid{
  margin-bottom: 20px;
  padding-bottom: 20px;
}

a:focus {
  outline:0;
}


.mt-4{
position: static;
}


.thank-you, {
   text-align: left;
   justify-content: left;
   margin-left: 0%;
}

.location-info, address{
  text-align: center;
  justify-content: center;
  margin-left: 0%;
}

/*.description-box{
justify-content: center;
  position: static;
}*/


p, h2,{
  margin: 0%;
  padding: 0%;
  position: static;

}

/*.contact{
  margin-left: -10%;
}*/

h1{
text-align: center;
}

.form-group{
  margin-bottom: -20px;
}

.gallery-txt{
  text-align: right;
  justify-content: right;
  margin-bottom: 5%;
}

.btn{
  background-color: darkgrey;
  border-color: black;
  outline-color: none;
  position: static;
  color: black;
  padding: 3px;
  font-size: 20px;
}

.service-button{
  justify-content: right;
  margin-left: 10%
}

.da-back-button{
  justify-content: left;
}

.btn:hover{
  background-color: darkgrey;
}

.btn:hover {
  border-color: white;
  border-width: 1px;
}

.display-3{
  font-size: 35px;
  margin-top: 50px;
  position: static;
}

.display-4{
  font-size: 20px;
  margin-top: 20px;
  position: static;
}


  .home-txt{
    text-align: justify;

  }

  .nav-but li{
    list-style-type: none;
  }


@media (min-width: 992px) {
  body {
    padding-top: 56px;
  }

  #hunter{

    margin-right: 10px;
  }
}

@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    .service_container{
      margin-left: 0%;
      text-align: left;
      .margin-right: 10px;
    }
    .main-logo{
      top: 20%;
      left: 40%;
    }



    /*.mt-4{
      width: 30%;
    }*/
  }

  @media only screen and (max-width: 400px) {
    .business-header{
    margin-bottom: -40%;
  }
    .btn{
      font-size: 15px;
    }
    }


  @media only screen and (min-width: 401px) and (max-width: 465px){
    .business-header{
     margin-bottom: -30%;
  }
  .btn{
    font-size: 15px;
  }

  #horn{
    width: 30%;
    height: auto;
    margin-right: 10px;
  }
    }

    @media only screen and (min-width: 465px) and (max-width: 515px){
      .business-header{
       margin-bottom: -22%;
    }
    .btn{
      font-size: 15px;
    }

    #horn{
      width: 30%;
      height: auto;
      margin: 5px;
    }

      }



      @media only screen and (min-width: 515px) and (max-width: 650px){
        .business-header{
         margin-bottom: -18%;
      }
      .btn{
        font-size: 15px;
      }
      .service_container {
        margin-left: 0%;
        text-align: left;
        }

        #horn{
          width: 35%;
          height: auto;
          margin: 15px;
        }
        /*p{
          width: 150%;
        }*/

        }




        @media only screen and (min-width: 576px) and (max-width: 991px){
          p{
            width: 150%;
          }
          li {
            width: 150%;
          }
          .service_container li{
            width: 150%;
          }
          #horn{
            width: 35%;
            height: auto;
            margin: 15px;
            border-style: double;
          }

          #pond{
            width: 60%;
            height: auto;
            margin: 15px;
            border-style: double;
          }

        }




        @media only screen and (min-width: 650px) and (max-width: 750px){
          .business-header{
           margin-bottom: -15%;
        }
        .btn{
          font-size: 20px;
        }

        .service_container {
          margin-left: 0%;
          text-align: left;
          }

          #horn{
            width: 30%;
            height: auto;
            margin-right: 15px;
          }
}

          @media only screen and (min-width: 750px) and (max-width: 850px){
            .business-header{
             margin-bottom: -10%;
          }
          .btn{
            font-size: 20px;
          }
          .service_container {
            margin-left: 0%;
            text-align: left;
            }

            #horn{
              width: 30%;
              height: auto;
              margin: 15px;
            }

            }


            @media only screen and (min-width: 768px) and (max-width: 850px){
              .business-header{
               margin-bottom: -5%;
            }
            .btn{
              font-size: 20px;
            }
            .service_container {
              margin-left: 0%;
              text-align: left;
              width: 100%;
              }

              #horn{
                width: 30%;
                height: auto;
                margin: 15px
              }

              }

              @media only screen and (min-width: 850px) and (max-width: 991px){
                .business-header{
                 margin-bottom: -5%;
              }
              .btn{
                font-size: 20px;
              }
              .service_container {
                margin-left: 0%;
                text-align: left;
                }

                #horn{
                  width: 30%;
                  height: auto;
                  margin: 15px
                }

                }


                @media only screen and (min-width: 991px) and (max-width: 1199px){

                  #horn{
                    width: 35%;
                    height: auto;
                    margin: 15px
                  }

                  }




  /*@media only screen and (min-width: 600px) {
    .business-header{
    margin-bottom: -20%;
    }
    .da-back-button{
      bottom: 80%;
    }
  }*/

